--- a/socket/src/client1.html
+++ b/socket/src/client1.html
@@ -4,25 +4,56 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Web socket client1</title>
+    <link rel="stylesheet" href="css/client.css" >
 </head>
 <body>
-    <h1>Click the button to send a message to Web Socket Server</h1>
-    <button type="submit" id="submit" onclick="sendMessage()">Send Message</button>
+    <h1>Spark Chat</h1>
+    <form method='post' onsubmit="sendMessage(); return false">
+        <p>Enter your message</p>
+        <textarea id="message" name="message" style="width:300px; height:250px" ></textarea><br><br>
+        <input type="submit" value="Send Message" >
+    </form>
+    <h1 class="heading">Chat logs</h1>
+    <div id="chat-logs">
+
+    </div>
 </body>
 <script>
+    const id = 1
     // create WebSocket connection
-    const socket = new WebSocket('ws://localhost:8080/client1');
+    const socket = new WebSocket('ws://localhost:8080');
+    socket.binaryType = 'blob'
     // connection opened
     socket.addEventListener('open', (event) => {
-        console.log('Connected to WS server')
+        console.log('Web socket connection opened')
     })
-    socket.addEventListener('message', (event) => {
-        console.log('Message from the server', event.data)
+    socket.addEventListener('close', (event) => {
+        console.log('Web socket connection closed')
+    })
+    socket.addEventListener('message', (message) => {
+            if(message.data instanceof Blob){
+                reader = new FileReader()
+                reader.onload = () => {
+                    const messageObj = JSON.parse(reader.result)
+                    const identity = messageObj.id == id ? 'me' : 'other'
+                    const chat = document.getElementById('chat-logs')
+                    const chatBubble = document.createElement('div')
+                    chatBubble.className = `chatBubble ${identity}`
+                    chatBubble.innerText = messageObj.message
+                    chat.appendChild(chatBubble)
+                }
+                reader.readAsText(message.data)
+            }
     })
 
     const sendMessage = () => {
-        socket.send('Hello from Client1!')
-        console.log('Sent a message')
+        const message = document.getElementById('message').value
+        const messageObj = {
+            id: 1,
+            message: message
+        }
+        console.log(messageObj)
+        socket.send(JSON.stringify(messageObj))
     }
 </script>
 </html>
